[package]
name = "languages-rs"
version = "0.1.0"
authors = ["Daniel Solarte <contact@danielsolarte.com>"]
license = "MIT"
description = "An internationalization library for your projects"
repository = "https://github.com/danielsolartech/languages-rs"
keywords = ["internationalization", "i18n", "localization", "languages", "accessibility"]
categories = ["accessibility", "localization"]
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE"]
edition = "2018"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"

[[example]]
name = "json_files"
path = "examples/json_files.rs"

[[example]]
name = "toml_files"
path = "examples/toml_files.rs"
