[package]
name = "languages-rs"
version = "0.2.0"
authors = ["Daniel Solarte <contact@danielsolarte.com>"]
license = "MIT"
description = "An internationalization library for your projects"
repository = "https://github.com/daschdev/languages-rs"
documentation = "https://docs.rs/languages-rs"
keywords = ["internationalization", "i18n", "localization", "languages", "accessibility"]
categories = ["accessibility", "localization"]
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE"]
edition = "2018"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
toml = { version = "0.5", optional = true }

[features]
default = []

with-json = ["serde_json"]
with-toml = ["toml"]

[[example]]
name = "json_files"
path = "examples/json_files.rs"
required-features = ["with-json"]

[[example]]
name = "toml_files"
path = "examples/toml_files.rs"
required-features = ["with-toml"]
